补充多两种解法

--- a/双指针/2.删除链表的倒数第 N 个结点.md
+++ b/双指针/2.删除链表的倒数第 N 个结点.md
@@ -85,3 +85,57 @@ var removeNthFromEnd = function (head, n) {
   return res;
 };
 ```
+
+### 2、栈
+
+利用栈来解决，遍历时候将结点推入栈，然后再依次取出 n 次，此时留在栈顶的就是待删除结点的前驱结点
+
+```javascript
+/**
+ * @param {ListNode} head
+ * @param {number} n
+ * @return {ListNode}
+ */
+var removeNthFromEnd = function (head, n) {
+  let emptyNode = { next: head, val: 0 };
+  let cur = emptyNode;
+  let stack = [];
+  while (cur) {
+    stack.push(cur);
+    cur = cur.next;
+  }
+
+  for (let i = 0; i < n; i++) {
+    stack.pop();
+  }
+
+  const prev = stack[stack.length - 1];
+  prev.next = prev.next.next;
+
+  return emptyNode.next;
+};
+```
+
+### 3、双指针
+
+这道题可以使用双指针的方法解决，定义 first 和 second 两个指针，让 first 指针领先 second 指针 n 个位置，当 first 指针到达末尾时，此时 second 指针指向的结点即为待删除结点。
+
+```javascript
+var removeNthFromEnd = function (head, n) {
+  let emptyNode = { next: head, val: 0 };
+  let second = emptyNode;
+  let first = head;
+
+  for (let i = 0; i < n; i++) {
+    first = first.next;
+  }
+
+  while (first) {
+    first = first.next;
+    second = second.next;
+  }
+
+  second.next = second.next.next;
+  return emptyNode.next;
+};
+```
