双指针解法

--- a/双指针/4.颜色分类.md
+++ b/双指针/4.颜色分类.md
@@ -62,3 +62,36 @@ var sortColors = function (nums) {
   }
 };
 ```
+
+### 2、双指针
+
+本题可以使用双指针的方法，将数字 0 交换到 P0 指针，数字 1 交换到 P1 指针 。
+当前指针指到 1 时，将 nums[P1]和当前值交换，然后 P1 指针+1 。
+当前指针指到 0 时，将 nums[P0]和当前值交换，有可能会把 1 交换出去，因为 P0 会<= P1，因此当 P0 < P1 时，交换完 P0 的值和当前值之后，需要将 P1 和当前值再交换一次，保证 1 不会跑到后面去，然后 P1 和 P0 都加 1。
+
+```javascript
+function swap(nums, idx1, idx2) {
+  [nums[idx1], nums[idx2]] = [nums[idx2], nums[idx1]];
+}
+
+var sortColors = function (nums) {
+  const len = nums.length;
+  let p0 = 0,
+    p1 = 0;
+
+  for (let i = 0; i < len; i++) {
+    if (nums[i] === 1) {
+      swap(nums, i, p1);
+      p1++;
+    } else if (nums[i] === 0) {
+      swap(nums, i, p0);
+
+      if (p0 < p1) {
+        swap(nums, i, p1);
+      }
+      p0++;
+      p1++;
+    }
+  }
+};
+```
