--- a/题目/树/1.二叉树的遍历.md
+++ b/题目/树/1.二叉树的遍历.md
@@ -97,3 +97,69 @@ var preorderTraversal = function (root) {
   return res;
 };
 ```
+
+## 2. 中序遍历
+
+### 递归
+
+```javascript
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var inorderTraversal = function (root) {
+  let res = [];
+  function inOrder(root, res) {
+    if (!root) {
+      return;
+    }
+    inOrder(root.left, res);
+    res.push(root.val);
+    inOrder(root.right, res);
+  }
+
+  inOrder(root, res);
+
+  return res;
+};
+```
+
+### 迭代
+
+```javascript
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var inorderTraversal = function (root) {
+  // 迭代法实现中序遍历 左 -> 中 -> 右
+  // 逐次判断当前结点，如果当前结点不为null，则将当前结点推入栈，然后将指针指向该节点的左子树，继续往下一层级查找。
+  // 如果当前指针为null，说明上一层级没有左子树，那么将最后一个入栈的结点pop出来，然后指针指向结点的右子树，继续重复上述过程。
+  let stack = []; // 栈
+  let res = []; // 结果数组
+
+  // 当根节点不为空或者栈也不为空时循环继续
+  while (root || stack.length) {
+    while (root) {
+      // 结点存在，继续迭代左子树
+      stack.push(root);
+      root = root.left;
+    }
+    // 结点不存在了，说明上一个结点是最深的左子树，将它找出来，然后把值放进去结果数组
+    root = stack.pop();
+    res.push(root.val);
+    // 继续看看有没有右子树
+    root = root.right;
+  }
+
+  return res;
+};
+```
