修改一下错误的单词

--- a/题目/双指针/9.删除有序数组中的重复项 II.md
+++ b/题目/双指针/9.删除有序数组中的重复项 II.md
@@ -53,7 +53,7 @@ var removeDuplicates = function (nums) {
     // 不相同，直接赋值过来就好
     if (nums[slow - 2] !== nums[fast]) {
       nums[slow] = nums[fast];
-      slot++;
+      slow++;
     }
     // 相等了，说明超过两个相同了，要去找一个不同的放到slow指针位置
     fast++;
