--- a/题目/贪心/3.种花问题.md
+++ b/题目/贪心/3.种花问题.md
@@ -40,11 +40,11 @@
 
 ```javascript
 /**
- * @param {number[]} g
- * @param {number[]} s
- * @return {number}
+ * @param {number[]} flowerbed
+ * @param {number} n
+ * @return {boolean}
  */
-var findContentChildren = function (g, s) {
+var canPlaceFlowers = function (flowerbed, n) {
   let count = 0;
   for (let i = 0; i < flowerbed.length; i++) {
     if (
@@ -58,4 +58,5 @@ var findContentChildren = function (g, s) {
   }
 
   return count >= n;
+};
 ```
