--- a/题目/动态规划/1.最大子数组和.md
+++ b/题目/动态规划/1.最大子数组和.md
@@ -35,7 +35,7 @@
 
 本题使用动态规划算法解答。
 
-假设数组长度为 n，那么数组下标为 0 - n-1。
+假设数组长度为 n，那么数组下标为 0 - n - 1。
 
 我们用 dp(i)来表示第 i 个数结尾的最大子数组和，那么只需要取到当中的最大值即为我们的结果。
 
