--- a/题目/链表/2.两两交换链表中的节点.md
+++ b/题目/链表/2.两两交换链表中的节点.md
@@ -66,3 +66,30 @@ var swapPairs = function (head) {
   return two;
 };
 ```
+
+### 2、迭代法
+
+```javascript
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var swapPairs = function (head) {
+  const prevHead = new ListNode(0);
+  prevHead.next = head;
+
+  let temp = prevHead; // 新建一个临时结点放在最前面
+  // 当临时结点后面还有两个结点的时候才需要换位置
+  while (temp.next !== null && temp.next.next !== null) {
+    const node1 = temp.next;
+    const node2 = temp.next.next;
+
+    temp.next = node2; // 把前面一个位置变成第二个结点
+    node1.next = node2.next; // 再把原本node2的下一个变成node1的下一个
+    node2.next = node1; // 然后把node1变成node2的下一个，交换完成
+    temp = node1; // temp来到node1的位置，就是交换完之后的第二个结点所在的位置
+  }
+
+  return prevHead.next;
+};
+```
