复写零的双指针解法

--- a/题目/双指针/11.复写零.md
+++ b/题目/双指针/11.复写零.md
@@ -65,3 +65,50 @@ var duplicateZeros = function (arr) {
   }
 };
 ```
+
+### 双指针
+
+上面的解法可以进行优化，就是说不需要开辟一个新的空间，可以使用双指针来进行优化。
+
+我们可以定义一个 top 变量来代替前面的 tempArr，假设一下复写零之后的数组的长度。
+
+如果 arr[i]是 0，那么 top 的位置往后走两步，如果非 0，就往后走一步，这样当数组长度遍历完之后，如果 top > arr.length，那么 arr 的最后一个就要变成 0。
+
+然后使用 i 和 j 两个指针，i 指针指向找 top 时最后的位置，j 指针则是从最后开始遍历赋值，当 i 指针所指的值为 0 时，j 指针需要赋值两次，最后当 j 指针小于 0 时则结束。
+
+```javascript
+/**
+ * @param {number[]} arr
+ * @return {void} Do not return anything, modify arr in-place instead.
+ */
+var duplicateZeros = function (arr) {
+  // 中间变量top，看看到顶的时候会不会超出arr的长度，超出就说明最后一位是0
+  let top = 0;
+  const length = arr.length;
+  let i = -1;
+  while (top < length) {
+    i++;
+    top = arr[i] === 0 ? top + 2 : top + 1; // 0加两步，1加一步
+  }
+  // 定义一个j，从后面往前遍历
+  let j = length - 1;
+  if (top === length + 1) {
+    // top 和 length 不相等，说明最后一位是0
+    arr[j] = 0;
+    j--;
+    i--;
+  }
+
+  while (j >= 0) {
+    // 从后往前赋值
+    arr[j] = arr[i];
+    j--;
+    if (arr[i] === 0) {
+      // i 是 0，需要占两个位置
+      arr[j] = arr[i];
+      j--;
+    }
+    i--;
+  }
+};
+```
