广度优先遍历

--- a/题目/树/3.找树左下角的值.md
+++ b/题目/树/3.找树左下角的值.md
@@ -70,3 +70,40 @@ var findBottomLeftValue = function (root) {
   return result;
 };
 ```
+
+### 广度优先
+
+广度优先方法就是优先遍历每一层，本题可以从右到左进行广度优先遍历，这样可以保证遍历到最后的结果就是我们想要的。
+
+```javascript
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var findBottomLeftValue = function (root) {
+  let result = 0;
+  const arr = [root];
+
+  while (arr.length) {
+    const cur = arr.shift();
+    // 右边先放进去
+    if (cur.right) {
+      arr.push(cur.right);
+    }
+    if (cur.left) {
+      arr.push(cur.left);
+    }
+    result = cur.val;
+  }
+
+  return result;
+};
+```
